--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ $ git checkout gh-pages
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Album maintained by <a href="https://github.com/mn-works">mn-works</a></p>
+        <p class="copyright">维护 by <a href="https://github.com/mn-works">mn-works</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
